@@ -2,6 +2,7 @@
 
 * Major changes
  * Fixed 'cached_pages' indexing.
+ * Added support for haproxy and init.d scripts in cap deploy rules.
 
 * Minor changes
  * Fixed 'prefix' option on [url].
